2008-04-20  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=15449
        [CAIRO] SVG gradients do not work properly

        Fixed SVG-gradients in Cairo.

        * svg/graphics/cairo/SVGPaintServerGradientCairo.cpp:
        (WebCore::SVGPaintServerGradient::setup):


Canonical link: https://commits.webkit.org/25631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32284 268f45cc-cd09-0410-ab3c-d52691b4dbfc